correcting alignments

--- a/portfolio/style/style.css
+++ b/portfolio/style/style.css
@@ -41,6 +41,7 @@ img {
   display: block;
   margin: 0 auto;
   width: 200px;
+  box-shadow: 10px 10px 5px rgb(0, 0, 0);
 }
 /* 
 #header {
@@ -57,4 +58,9 @@ img {
 
   figcaption {
     text-align: center;
+  }
+
+  nav {
+    text-align: center;
+    font-size: 25;
   }
